Updated images, suppressed warnings

--- a/7.0/Apps/PointOfSale/src/PointOfSale/Pages/DashboardPage.xaml
+++ b/7.0/Apps/PointOfSale/src/PointOfSale/Pages/DashboardPage.xaml
@@ -155,25 +155,25 @@
 
                                 <Grid ColumnDefinitions="200,*,150,150">
                                     <Label Text="David Ortinau" />
-                                    <Label Text="Spicy Noodles" Grid.Column="1" />
+                                    <Label Text="Flat Noodles" Grid.Column="1" />
                                     <Label Text="$5.95" Grid.Column="2" />
                                     <Label Text="Completed" Grid.Column="3" />
                                 </Grid>
                                 <Grid ColumnDefinitions="200,*,150,150">
                                     <Label Text="David Ortinau" />
-                                    <Label Text="Spicy Noodles" Grid.Column="1" />
+                                    <Label Text="Flat Noodles" Grid.Column="1" />
                                     <Label Text="$5.95" Grid.Column="2" />
                                     <Label Text="Completed" Grid.Column="3" />
                                 </Grid>
                                 <Grid ColumnDefinitions="200,*,150,150">
                                     <Label Text="David Ortinau" />
-                                    <Label Text="Spicy Noodles" Grid.Column="1" />
+                                    <Label Text="Flat Noodles" Grid.Column="1" />
                                     <Label Text="$5.95" Grid.Column="2" />
                                     <Label Text="Completed" Grid.Column="3" />
                                 </Grid>
                                 <Grid ColumnDefinitions="200,*,150,150">
                                     <Label Text="David Ortinau" />
-                                    <Label Text="Spicy Noodles" Grid.Column="1" />
+                                    <Label Text="Flat Noodles" Grid.Column="1" />
                                     <Label Text="$5.95" Grid.Column="2" />
                                     <Label Text="Completed" Grid.Column="3" />
                                 </Grid>
