--- a/7.0/Apps/PointOfSale/src/PointOfSale/Pages/Views/AddProductView.xaml
+++ b/7.0/Apps/PointOfSale/src/PointOfSale/Pages/Views/AddProductView.xaml
@@ -74,9 +74,8 @@
                     >
                     <BindableLayout.ItemsSource>
                         <x:Array Type="{x:Type x:String}" >
-                            <x:String>Noodles</x:String>
-                            <x:String>Rice</x:String>
-                            <x:String>Appetizers</x:String>
+                            <x:String>Starters</x:String>
+                            <x:String>Main</x:String>
                             <x:String>Desserts</x:String>
                             <x:String>Beverages</x:String>
                         </x:Array>
