--- a/7.0/Apps/PointOfSale/src/PointOfSale/Resources/Styles/Data.xaml
+++ b/7.0/Apps/PointOfSale/src/PointOfSale/Resources/Styles/Data.xaml
@@ -5,9 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
     <x:Array Type="{x:Type x:String}" x:Key="CategoriesArray">
-        <x:String>Noodles</x:String>
-        <x:String>Rice</x:String>
-        <x:String>Appetizers</x:String>
+        <x:String>Starters</x:String>
+        <x:String>Main</x:String>
         <x:String>Desserts</x:String>
         <x:String>Beverages</x:String>
     </x:Array>
