Update orders page

--- a/7.0/Apps/PointOfSale/src/PointOfSale/Pages/DashboardPage.xaml
+++ b/7.0/Apps/PointOfSale/src/PointOfSale/Pages/DashboardPage.xaml
@@ -154,21 +154,9 @@
                                 <BoxView Style="{StaticResource HRule}"/>
 
                                 <Grid ColumnDefinitions="200,*,150,150">
-                                    <Label Text="David Ortinau" />
-                                    <Label Text="Flat Noodles" Grid.Column="1" />
-                                    <Label Text="$5.95" Grid.Column="2" />
-                                    <Label Text="Completed" Grid.Column="3" />
-                                </Grid>
-                                <Grid ColumnDefinitions="200,*,150,150">
-                                    <Label Text="David Ortinau" />
-                                    <Label Text="Flat Noodles" Grid.Column="1" />
-                                    <Label Text="$5.95" Grid.Column="2" />
-                                    <Label Text="Completed" Grid.Column="3" />
-                                </Grid>
-                                <Grid ColumnDefinitions="200,*,150,150">
-                                    <Label Text="David Ortinau" />
-                                    <Label Text="Flat Noodles" Grid.Column="1" />
-                                    <Label Text="$5.95" Grid.Column="2" />
+                                    <Label Text="Jamshed Damkewala" />
+                                    <Label Text="Pork Dumplings" Grid.Column="1" />
+                                    <Label Text="$6.50" Grid.Column="2" />
                                     <Label Text="Completed" Grid.Column="3" />
                                 </Grid>
                                 <Grid ColumnDefinitions="200,*,150,150">
