Minor Currency format tweaks

--- a/7.0/Apps/PointOfSale/src/PointOfSale/Pages/Views/OrderCartView.xaml
+++ b/7.0/Apps/PointOfSale/src/PointOfSale/Pages/Views/OrderCartView.xaml
@@ -53,7 +53,7 @@
                                             <FormattedString>
                                                 <Span Text="{Binding Title}"/>
                                                 <Span Text="{x:Static system:Environment.NewLine}"/>
-                                                <Span TextColor="{StaticResource TextSecondary}" FontSize="12" Text="{Binding Price, StringFormat='${0}'}"/>
+                                                <Span TextColor="{StaticResource TextSecondary}" FontSize="12" Text="{Binding Price, StringFormat='{0:C}'}"/>
                                             </FormattedString>
                                         </Label.FormattedText>
                                     </Label>
@@ -79,7 +79,7 @@
                                     />
                                         
                                 </Border>
-                                <Label Text="{Binding SubTotal, StringFormat='${0}'}"
+                                <Label Text="{Binding SubTotal, StringFormat='{0:C}'}"
                                        Grid.Column="2"
                                        VerticalOptions="Center"/>
                             </Grid>
