--- a/7.0/Apps/PointOfSale/src/PointOfSale/Pages/HomePage.xaml
+++ b/7.0/Apps/PointOfSale/src/PointOfSale/Pages/HomePage.xaml
@@ -63,7 +63,7 @@
                                                      Spacing="6">
                                     
                                     <Label Text="{Binding Title}" HorizontalOptions="Center" Style="{StaticResource Title2}" HorizontalTextAlignment="Center"/>
-                                    <Label Text="{Binding Price, StringFormat='{C1}'}" HorizontalOptions="Center"/>
+                                    <Label Text="{Binding Price,StringFormat='{0:C1}'}" HorizontalOptions="Center"/>
                                     <!--<Label Text="20 Bowls available" HorizontalOptions="Center" Style="{StaticResource Subhead}"/>-->
                                 </VerticalStackLayout>
                                 <Image
